// Code generated - DO NOT EDIT.
// This file is a generated protobuf definition and any manual changes will be lost.

syntax = "proto3";
package WooPPV1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nakji-network/woofi-connectors/woofi/WooPPV1";

message OwnershipTransferred {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes previousOwner = 5;
	bytes newOwner = 6;
	bytes contractAddress = 7;
	bytes senderAddress = 8;
	bytes receiverAddress = 9;
}

message RewardManagerUpdated {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes newRewardManager = 5;
	bytes contractAddress = 6;
	bytes senderAddress = 7;
	bytes receiverAddress = 8;
}

message StrategistUpdated {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes strategist = 5;
	bool flag = 6;
	bytes contractAddress = 7;
	bytes senderAddress = 8;
	bytes receiverAddress = 9;
}

message Withdraw {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes token = 5;
	bytes to = 6;
	bytes amount = 7; // uint256
	bytes contractAddress = 8;
	bytes senderAddress = 9;
	bytes receiverAddress = 10;
}

message OwnershipTransferPrepared {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes previousOwner = 5;
	bytes newOwner = 6;
	bytes contractAddress = 7;
	bytes senderAddress = 8;
	bytes receiverAddress = 9;
}

message ParametersUpdated {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes baseToken = 5;
	bytes newThreshold = 6; // uint256
	bytes newLpFeeRate = 7; // uint256
	bytes newR = 8; // uint256
	bytes contractAddress = 9;
	bytes senderAddress = 10;
	bytes receiverAddress = 11;
}

message Paused {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes account = 5;
	bytes contractAddress = 6;
	bytes senderAddress = 7;
	bytes receiverAddress = 8;
}

message WooGuardianUpdated {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes newWooGuardian = 5;
	bytes contractAddress = 6;
	bytes senderAddress = 7;
	bytes receiverAddress = 8;
}

message WooracleUpdated {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes newWooracle = 5;
	bytes contractAddress = 6;
	bytes senderAddress = 7;
	bytes receiverAddress = 8;
}

message Unpaused {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes account = 5;
	bytes contractAddress = 6;
	bytes senderAddress = 7;
	bytes receiverAddress = 8;
}

message WooSwap {
	google.protobuf.Timestamp ts = 1;
	uint64 blockNumber = 2;
	uint64 index = 3;
	bytes txHash = 4;
	bytes fromToken = 5;
	bytes toToken = 6;
	bytes fromAmount = 7; // uint256
	bytes toAmount = 8; // uint256
	bytes from = 9;
	bytes to = 10;
	bytes contractAddress = 11;
	bytes senderAddress = 12;
	bytes receiverAddress = 13;
}
